build: configura estrutura multi-módulo e tratamento global de exceções
- Refatoração do projeto para estrutura multi-módulo (parent, domain, backend)
- Implementação do GlobalExceptionHandler para captura de erros de runtime e validação.
- Padronização da resposta de erro com o DTO ErrorResponse
- Adição de logs de erro (SLF4J) para facilitar o debug via console.

--- a/backend-module/src/main/resources/application.yml
+++ b/backend-module/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
@@ -23,9 +23,10 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
     open-in-view: false
 
-  sql:
-    init:
-      mode: never
+  logging:
+      level:
+        org.springframework.data: DEBUG
+
 
 server:
   port: 8080
