--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,12 @@ jobs:
           distribution: 'temurin'
       - name: Build backend
         run: mvn -B -f backend-module clean package
+
+      # --- FRONTEND ---
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Build frontend
+        run: npm install
