--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_HOST: unix:///var/run/docker.sock
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -12,6 +14,23 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build Projeto Completo (Raiz e Módulos)
-        run: mvn -B clean package
 
+
+      - name: Validate Docker (diagnóstico)
+        run: |
+          echo "== docker version =="
+          docker --version || true
+          echo "== docker info =="
+          docker info || true
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Build e Testes de Integração (Maven)
+
+        run: mvn -B clean verify
