fix: corrigir inicialização do banco e testes de integração com PostgreSQL
- Corrige erro de leitura do schema.sql ajustando localização para src/main/resources/db/
- Remove DatabaseInitializer.java e substitui por configuração nativa spring.sql.init
- Ajusta application-test.yml para usar driver e dialeto PostgreSQL reais
- Adiciona configuração para evitar erro createClob() no driver PostgreSQL
- Configura testes para não substituir datasource com H2 via @AutoConfigureTestDatabase(replace = NONE)

--- a/backend-module/pom.xml
+++ b/backend-module/pom.xml
@@ -34,6 +34,8 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- Testcontainers PostgreSQL (Apenas para escopo de teste) -->
