--- a/backend-module/src/test/resources/application-test.yml
+++ b/backend-module/src/test/resources/application-test.yml
@@ -1,8 +1,15 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
+    driver-class-name: org.postgresql.DriRapplver
     jpa:
       database-platform: org.hibernate.dialect.PostgreSQLDialect
-      hibernate:
-        ddl-auto: none # O Testcontainers usará o seu schema.sql
-      show-sql: true
+      properties:
+        hibernate:
+          jdbc:
+            lob:
+              non_contextual_creation: true
+        show-sql: true
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.testcontainers: INFO
