--- a/backend-module/src/test/resources/application-test.yml
+++ b/backend-module/src/test/resources/application-test.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.DriRapplver
+    driver-class-name: org.postgresql.Driver
     jpa:
       database-platform: org.hibernate.dialect.PostgreSQLDialect
       properties:
