--- a/backend-module/src/test/resources/application-test.yml
+++ b/backend-module/src/test/resources/application-test.yml
@@ -1,14 +1,21 @@
 spring:
+  profiles:
+    active: test
   datasource:
     driver-class-name: org.postgresql.Driver
-    jpa:
-      database-platform: org.hibernate.dialect.PostgreSQLDialect
-      properties:
-        hibernate:
-          jdbc:
-            lob:
-              non_contextual_creation: true
-        show-sql: true
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
+      show-sql: true
+  sql:
+    init:
+      mode: never
 logging:
   level:
     org.hibernate.SQL: DEBUG
