ci: corrigir caminhos do workspace Angular e mapeamento de cache
- Ajustado o 'cache-dependency-path' para localizar corretamente o package-lock.json.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,16 +41,16 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'                    # habilita cache automático para dependências
-          cache-dependency-path: 'frontend/package-lock.json'
+          cache-dependency-path: 'frontend/beneficio-app/package-lock.json'
 
       - name: Install Angular dependencies
         run: npm ci                     # mais rápido e reprodutível em CI
-        working-directory: ./frontend
+        working-directory: ./frontend/beneficio-app
 
       - name: Run Angular unit tests
         run: npm test -- --watch=false --browsers=ChromeHeadless
-        working-directory: ./frontend
+        working-directory: ./frontend/beneficio-app
 
       - name: Build Angular app
         run: npm run build -- --configuration production
-        working-directory: ./frontend
+        working-directory: ./frontend/beneficio-app
